--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,3 @@
-
-
-
 .header {
     
     /* font is apple font */
@@ -12,38 +9,45 @@
     /* 그리드로 배치 */
     display: grid;
     /* 그리드의 열의 개수 */
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 1fr);
     /* 그리드의 행의 개수 */
     grid-template-rows: 1fr ;
     
-    /* 백그라운드 색상 */
-    background-color: var(--color-bg);
-    /* 그림자 */
-    box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
+    /* 상하 정렬 중간으로*/
+    place-items: center;
+    
+    
     /* 텍스트 정렬 */
     text-align: center;
     /* 텍스트 색상 */
     color: var(--color-text);
     
-
     /* 밑줄 제거 */
     text-decoration: none !important;
 
+    height : 3em;
 
     /* 헤더의 너비는 우측 40% */
     width: 40%;
     
+    /* 그림자 */
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.1);
 
+    /* 백그라운드 색상 */
+    background-color: var(--color-bg);
+    
+    font-size:1em;
 }
 
-.headerItem :hover {
+.headerItem{
+    height: 100%;
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
 
-    position :relative;
-    background-color: var(--color-bg-hover);
-    
-    /* 헤더의 크기 */
-    height: 3vw;
 
-    /* 텍스트 크기 */
+.headerItem:hover {
     font-size: 1.2em;
+    font-weight: bold;
 }
